fix: move hamburger to right and fix pomegranate overlap

--- a/src/app/components/Navbar/Hamburger/Hamburger.scss
+++ b/src/app/components/Navbar/Hamburger/Hamburger.scss
@@ -6,7 +6,7 @@
   position: absolute;
   margin-block: $main-padding-mobile-block;
   margin-inline: $main-padding-mobile-inline;
-  left: 0;
+  right: 0;
   background: none;
   outline-offset: 3px;
   border: none;
