--- a/src/app/pages/Themes/Themes.scss
+++ b/src/app/pages/Themes/Themes.scss
@@ -27,7 +27,7 @@
     // bottom: calc(-15% - 5vw);
     bottom: 0;
     right: -100px;
-    z-index: 10;
+    z-index: 1;
     height: fit-content;
     width: calc(160px + 8vw);
 
